# healthy-food-plan-2

./: .env.example  ARCHITECTURE.md  CORS_SETUP.md  DELIVERY_SUMMARY.md  DEMO_CHECKLIST.md  FILE_LIST.md  PROJECT_README.md  QUICK_START_FRONTEND.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  vercel.json
backend/app/: db.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 38afa1083477_optional_feature.py  670992587939_optional_password.py  8c333aca7da5_init.py  95e4ec9bca07_extra_field_added.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: login.py
frontend/: .env.docker  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/data/: seedData.js
frontend/src/pages/: Dashboard.jsx  FoodLogs.jsx  ImageUpload.jsx  Inventory.jsx  Login.jsx  Profile.jsx  Register.jsx  Resources.jsx
frontend/src/services/: api.js
