[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "coverage>=7.12.0",
    "fastapi[standard]>=0.121.2",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "sqlmodel>=0.0.27",
]
